@@ -1,4 +1,5 @@
 1.6.0
+Sorted plugins in prefs dialog.
 Minor gui tweaks.
 Removed some redundant code.
 Better function etc recognition especially for html.
